--- a/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
+++ b/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
@@ -1,4 +1,4 @@
-% Created 2020-09-27 dom 14:59
+% Created 2020-09-30 qua 16:52
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -54,7 +54,7 @@ Therefore, this model introduces both housing and asset bubbles	on Sraffian supe
 
 
 \section{Introduction}
-\label{sec:orge9753c9}
+\label{sec:orgbf76fa0}
 \label{sec:introduction}
 
 Non-residential investment is the most scrutinized variable in demand-led growth models so that others expenditures play a secondary role \cite{brochier_macroeconomics_2017}.
@@ -91,7 +91,7 @@ Section \ref{sec:Conclusion} offers some concluding remarks while Appendix \ref{
 
 
 \section{Empirical Motivation}
-\label{sec:org3a80217}
+\label{sec:orgb1b3da4}
 \label{sec:empirical}
 
 A current trend among empirical research on demand-led growth is about the role of NCC autonomous expenditures.
@@ -101,6 +101,8 @@ Finally, \textcite{girardi_autonomous_2018} bring evidence that those expenditur
 Nevertheless, there still is a lack of studies on the role of residential investment specifically. 
 Except for \textcites{green_follow_1997}{leamer_housing_2007} ---  which shows the relevance of this expenditure to US business cycle at least since the
 post-war period ---, most of those studies were published after the Great Recession (2008-2009)\footnote{More precisely, Leamer \textcite[p.~8]{leamer_housing_2007} argues that the US business cycles can be characterized as follows: ``[f]irst homes, then cars, and last business equipment''.}.
+
+
 
 \begin{figure}[htb]
     \centering
@@ -119,10 +121,10 @@ However, little progress has been made in understanding its theoretical determin
 \textcite{teixeira_crescimento_2015} proposes the so-called houses own interest rate (\(own\)) in order to analyze the relation between residential investment, real estate inflation and interest rates during the U.S. housing bubble episode.
 Estimated by deflating mortgages interest rate real estate inflation, this particular real interest rate is the most relevant for households since it is the real cost in real estate from buying real estate  \cite[p.~53]{teixeira_crescimento_2015}.
 In short, this is the real interest rate that is relevant for house investors.
-Figure \ref{propria_investo} shows how this  procedure is more adequate than a general price index deflation --- as \textcite[p.~143--6]{fair_macroeconometric_2013} does --- to describe residential investment growth rate\footnote{It is worth noting that during a housing bubble period, it is real estate inflation that governs own's interest rate dynamics.
-Therefore, the lower this rate is, the greater the capital gains (in real estate) for speculating with real estate will be. This negative relation between houses own interest rate and residential investment is shown in Figure \ref{propria_investo} in which this particular real interest rate has been gradually decreased over the real estate boom (2002-5).}.
+Figure \ref{propria_investo} shows how this  procedure is more adequate than a general price index deflation --- as \textcite[p.~143--6]{fair_macroeconometric_2013} does --- to describe residential investment growth rate\footnote{It is worth noting that during a housing bubble period, it is real estate inflation that governs own's interest rate dynamics. Therefore, the lower this rate is, the greater the capital gains (in real estate) for speculating with real estate will be. This negative relation between houses own interest rate and residential investment is shown in Figure \ref{propria_investo} in which this particular real interest rate has been gradually decreased over the real estate boom (2002-5).}.
 Based on this concept, \textcite{petrini_demanda_2019} estimated an econometric model for the U.S. (1992 to 2019) and presents empirical evidence that the residential investment growth rate and houses own interest rate share a common negative long-run trend.
 Furthermore, \textcite{petrini_demanda_2019} also reports a unidirectional long-run causality from houses own interest rate to residential investment growth rate.
+
 
 
 In order to depict the relation between housing and business cycle, we present Figure \ref{fig:cycles} in which each cycle is represented in a different panel\footnote{This similar reasoning can be found in \textcite{fiebiger_trend_2017}. Unlike them, we plot only residential investment without including otherhouseholds expenses financed by credit.}.
@@ -165,15 +167,6 @@ As a result, both residential investment and durable goods consumption share hav
 On the aftermath of the housing burst (2005-2009), houses own interest rate increases and is followed by a sharp decrease in both residential investment and durable goods consumption.
 Therefore, real estate inflation and durable goods consumption are connected in the U.S. and have relevant implications for the business cycle \footnote{\textcites{zezza_u.s._2008}{barba_rising_2009}, for instance, also report that credit-financed consumption was one of the main drivers of economic growth before the Great Recession.}. 
 
-\begin{figure}[htb]
-    \centering
-        \caption{Residential investment share Vs. durable goods share Vs. Houses Own interest rate\\\centering Before, during and after housing bubbles\\\centering (Dots darken in  time)} 
-    \includegraphics[width = 0.75\textwidth]{./figs/Durables_3D.png}
-    \label{fig:Durables_cycles}
-    \caption*{\textbf{Source:} Federal Reserve Bank of St. Louis, authors’ elaboration.}
-\end{figure}
-
-
 
 Before we move forward, it worth mentioning that the relevance of residential investment is not restricted to its growth effects nor to the U.S. 
 For example, \textcite{jorda_great_2016} report that credit and financial sector growth has been led mainly by mortgages for at least 17 OECD countries\footnote{As a consequence, banking activities were redirected towards granting credit majorly to households and not to productive investment \cites{erturk_banks_2007}{kohl_more_2018}.}. 
@@ -184,7 +177,7 @@ On the following section, we investigate how demand-led growth theoretical liter
 
 
 \section{The absence of residential investment in demand-led growth models}
-\label{sec:orge3b46e7}
+\label{sec:org9115b9d}
 \label{sec:Review}
 Recently, there is an effort to include SSM in Post-Keynesian strands \cite{lavoie_post-keynesian_2015}.
 Some authors have explored the consequences of  different NCC autonomous expenditures through modifications in the canonical Kaleckian model \cites{allain_tackling_2015}{lavoie_convergence_2016}\footnote{This modifications in the canonical Kaleckian growth model are related to critiques regarding its non-convergence to normal utilization rate on the long-run \cites{dallery_conflicting_2011}{skott_theoretical_2012}{hein_harrodian_2012}.}.
@@ -225,10 +218,10 @@ which its growth rate is described by the already mentioned houses own interest 
 
 
 \section{A Sraffian supermultiplier SFC model with residential investment}
-\label{sec:org9c4611b}
+\label{sec:orgb66a7b7}
 \label{sec:Model}
 \subsection{General equations}
-\label{sec:orgd8f0835}
+\label{sec:orgda4a13f}
 
 Our model is the most parsimonious as possible: a closed capitalist economy without government sector. Output (\(Y\)) is determined by  a fixed combination of a homogeneous labor (\(L\)) input with homogeneous fixed capacity creatin capital (\(K_f\)). 
 For simplicity, we put technological progress, depreciation and goods inflation aside so investment is presented in net terms and all variables --- except for houses --- are measured in real terms.
@@ -364,7 +357,7 @@ Change in loans     & &$+\Delta L_{k}$&&$+\Delta L_f$& &$-\Delta L$& 0\\
 
 
 \subsection{Firms}
-\label{sec:orgb96b74e}
+\label{sec:orge32f72a}
 
 In order to produce, firms purchase capital goods (\(-I_f\) in capital account) and hire workers, whom total remuneration is the economy wage bill. 
 Their total profits (\(FT\)) are a residual between sales (\(Y\)) and total wages (\(W\)). 
@@ -423,7 +416,7 @@ where \(r_g\) and \(r_n\) denotes gross and net profit rate respectively.
 
 
 \subsection{Banks}
-\label{sec:org9329620}
+\label{sec:org47a7bed}
 
 As in most part of SFC literature, banks do not have an active role in our model.
 They create money as credit is demanded and just after they collect deposits \cite{le_bourva_money_1992}. 
@@ -461,10 +454,10 @@ $$
 \end{equation}
 
 \subsection{Households}
-\label{sec:org52bea06}
+\label{sec:org245da16}
 
 \subsubsection*{Workers}
-\label{sec:org33954fd}
+\label{sec:orge3feb06}
 As mentioned before, we assume that workers expend (\(C_w\)) what they earn (\(W\)). 
 For simplicity, we consider that wages are the only source of income workers' disposable income (\(YD_{w}\)) and do not have access to consumption loans, so worker' saving (\(S_{hw}\)) are null.
 Therefore, accordingly to our hypothesis, workers' do not hold both net financial and total wealth.
@@ -489,7 +482,7 @@ V_{w} = 0
 \end{equation}
 
 \subsubsection*{Capitalists}
-\label{sec:org3d74198}
+\label{sec:org0adfe7a}
 This is the most complex institutional sector of our model. 
 We assume consumption (\(C_k\)) is fully-autonomous and financed by loans (\(L_{k}\)). 
 Disposable income (\(YD_k\)) is the sum of distributed profits and received interests on deposits, net of interests payments
@@ -597,11 +590,11 @@ In this section, we presented our fully-specified parsimonious model to represen
 
 
 \section{Short and long-run equilibria}
-\label{sec:org5b00c61}
+\label{sec:org6ea56cb}
 \label{sec:runs}
 In this Section, we show the implications residential investment inclusion into a SSM-SFC model. First, we present the short-run dynamics and then move to the fully-adjusted position (denoted by \(\star\)).
 \subsection{Short-run good market equilibrium}
-\label{sec:org8ded10b}
+\label{sec:org557ed8b}
 \label{short}
 
 In our no-government closed economic system, real output (equation \ref{_Y}) is the sum of household consumption (equation \ref{ConsumoTotal}) and both types of investment (equation \ref{_It}). 
@@ -611,7 +604,6 @@ If we replace equations \ref{_W} and  \ref{_If} into \ref{_Y} and considering eq
 
 \begin{equation}
 \label{AnaliticaNivel}
-36 - aeb49019-e5c1-4a0b-9b16-8aee5c9c5ee1 <output> <interrupt>
 \end{equation}
 
 Next, dividing equation \ref{AnaliticaNivel} by \ref{_YFC} and presenting firm's capital stock in terms of \(k\), we get the short-run equilibrium utilization rate (Eq \ref{short_u})
@@ -619,7 +611,6 @@ Next, dividing equation \ref{AnaliticaNivel} by \ref{_YFC} and presenting firm's
 
 \begin{equation}
 \label{short_u}
-37 - 0dfc2999-c0e7-45aa-b1fc-1c07f131e3f8 <output> <interrupt>
 \end{equation}
 
 So, rearranging Equation \ref{short_u} in terms of houses,
@@ -650,7 +641,7 @@ On the following subsection, analyze the fully-adjusted positions values and ste
 \textbf{Nota:} Não organizei bem o texto desta seção. Não tenho certeza se essa é a melhor ordem de apresentação das equações, mas acredito que isso seja rápido de corrigir.
 
 \subsection{Fully-adjusted position}
-\label{sec:org4bdf92e}
+\label{sec:orge73df09}
 \label{long}
 
 
@@ -686,21 +677,15 @@ $$
 \Delta \left(\frac{L_{f}}{K_{f}}\right) = \frac{I_{f} - FU}{K_{f}} - \ell^{\star}_{f}\cdot g^{\star}  = 0
 $$
 
-38 - 34923489-3bde-45b4-8844-7d438c018b2b <output> <interrupt>
-
 Next, we present capitalists' loans to houses stock ratio and  rewrite capitalists autonomous expenditure in terms of residential investment (Equation \ref{C_kZ})
 
 $$
 \Delta \left(\frac{L_k}{K_{HD}}\right) = \frac{C_k}{K_{HD}} - \ell^{\star}_{k}\cdot g^{\star} = 0
 $$
-39 - 5f5ffe43-24f8-42a4-af53-4272f7d1e6d5 <output> <interrupt>
-
 The same procedure can be applied to find mortgage to house stock ratio (\(mo^{\star}\), Equation \ref{mortgage_ratio}):
 $$
 \Delta \left(\frac{MO}{K_{HD}}\right) = \frac{\Delta MO}{K_{HD}} - mo^{\star}\cdot g^{\star} = 0
 $$
-40 - ca9002b3-ab2d-45b1-b8fb-4c6012fb9cac <output> <interrupt>
-
 Finaly, we can express deposits share on total capital stock (\(m^{\star}\)) in terms of previous stock/flow ratios:
 
 $$
@@ -719,8 +704,6 @@ $$rm\cdot (M - L_k - MO) = rm\cdot (L_f)$$
 So, we achieve the same result of Equation \ref{deposits_rhs} as expected.}):
 
 
-41 - f69b211b-c651-4b65-ae63-a266a5e381c9 <output> <interrupt>
-
 Before moving on to the numerical simulations, it worth noting that --- besides its counterintuitivity --- the decrease of \(k^{\star}\) as a result of the increase of residential investment growth rate (reported in equations \ref{partial_phi0} and \ref{partial_pi} in Appendix \ref{append:Solution}) is in line with the SSM.
 Since firms' investment grows (temporally) at a higher pace than NCC autonomous expenditures, it has only a level effect on capital stock.
 As usual, changes in income distribution affects GDP temporally.
@@ -728,7 +711,7 @@ However, it has permanent effects over capital stock composition as a result of 
 
 
 \section{Numerical Simulations}
-\label{sec:org6d9e358}
+\label{sec:orgee1c258}
 \label{sec:Experiments}
 \label{sec:Experiments}
 
@@ -743,7 +726,7 @@ Since we use a SFC framework, first experiment assess if income distribution aff
 Real estate increase experiment is motivated by recent US experience (from 1992 to 2019) as discussed in Section \ref{sec:empirical} while the last one aims to evaluate indebtedness stability.
 Table \ref{tab:param} in Appendix \ref{append:Data} presents the parameters of simulation and Table \ref{ResumoChoques} compare each result to baseline.
 \subsection{Wage-share decrease}
-\label{sec:orgb005138}
+\label{sec:orga8c1f99}
 \label{sec:Exp1}
 
 A wage-share decrease has a temporary negative impact both in GDP level and capacity utilization rate due to changes on the supermultiplier (see Figure \ref{fig:results_1}).
@@ -770,7 +753,7 @@ Therefore, gross and net profit rate remains persistently close to each other (s
 \textbf{Nota:} Farei referência às equações stock/flow quando terminar esta seção
 
 \subsection{Real estate inflation}
-\label{sec:org3aed90d}
+\label{sec:orge68f2d7}
 \label{sec:Exp2}
 
 
@@ -798,7 +781,7 @@ also the utilization rate.
 In other words, both autonomous expenditures share on GDP --- higher supermultiplier --- and houses share on real assets (see Equation \ref{partial_pi}) decline as a result of the already described non-residential investment positive reaction.
 Finally, it worth noting that real estate increase also has permanent effects over real stock/flow ratios due to capital gains.
 \subsection{Interest rate increase}
-\label{sec:org81b893b}
+\label{sec:org88ab2ce}
 \label{sec:Exp3}
 
 A increase in benchmark interest rate  has a persistent effect on long-run growth rate since houses own interest rate increases as well\footnote{Since we assume null spread on both mortgage and loans interest rate, an increase on deposits interest rate also increases the other ones. As a consequence, banks' net financial wealth remains unchanged.}.
@@ -857,7 +840,7 @@ Therefore, we find a stable debt dynamics for both capitalists and firms (other 
 
 
 \subsection{Plugging real data}
-\label{sec:orga14e907}
+\label{sec:orgc0e3964}
 
 
 Finally, we include houses own interest rate data into our model (see Figure \ref{fig:propria_investo}) proposed by \cite{teixeira_crescimento_2015} and evaluated under econometric scrutinity by \textcite{petrini_demanda_2019}.
@@ -885,7 +868,7 @@ In order to report this stylized fact, we argue that would be necessary to inclu
 
 
 \section{Concluding Remarks}
-\label{sec:org35a26bc}
+\label{sec:orga1b534b}
 \label{sec:Conclusion}
 This paper contributes to demand-led growth agenda, taking in consideration recent efforts of embedding it in a SFC framework.
 Our novelty is twofold: (i) inclusion of residential investment and (ii) determination of its growth rate by houses' own interest rate.
@@ -910,22 +893,22 @@ For example, future research could assess which institutional arrangements allow
 
 
 \section*{Acknowledgments}
-\label{sec:orgbba6d29}
+\label{sec:orgf3521a0}
 \noindent We  are  grateful  to  Lídia  Brochier,  Carolina  Baltar,  Franklin  Serrano  for  discussions,  as  well  as  comments  by  the participants of Cecon/Unicamp and UFRJ Political Economy research seminars and the participants of XII AKB meeting, 20th FMM forum, and 46th EEA Annual Conference. Any remaining errors are, of course, our own.
 
 \section*{Disclosure statement}
-\label{sec:org09469ea}
+\label{sec:orgadc342a}
 No potential conflict of interest was reported by the authors.
 
 \section*{References}
-\label{sec:orgc23cb62}
+\label{sec:org42914d0}
 \printbibliography[heading=none]
 
 
 \appendix
 
 \section{Analytical Solution}
-\label{sec:org55cb47b}
+\label{sec:orgc04ec3b}
 \label{append:Solution}
 
 
@@ -1022,7 +1005,7 @@ and mortgage to total capital stock ratio (\(m^{\star}\)):
 
 
 \section{Numerical Appendix}
-\label{sec:org7e1cb9c}
+\label{sec:org1f02b36}
 \label{append:Data}
 
 \begin{table}[H]
